# defensefood

./: .gitignore  Cargo.toml  README.md  pyproject.toml
backend/: PLAN.MD  pyproject.toml  unique_commodities_hs_cpc.csv  updated_data_rasff_window.xlsx
backend/defensefood/: __init__.py  core.py
backend/defensefood/api/: dependencies.py  main.py
backend/defensefood/ingestion/: comtrade.py  countries.py  faostat.py  hs_codes.py  rasff.py
backend/defensefood/models/: network.py  rasff.py  scores.py  trade.py
backend/defensefood/pipeline/: dependency_pipeline.py  hazard_pipeline.py  network_pipeline.py  scoring_pipeline.py  trade_flow_pipeline.py
backend/script/: .env.example  __init__.py  analyze_merged_trade.py  checkpoint.py  comtrade_fetcher.py  country_loader.py  fetch_comtrade_pipeline.py  hs_codes_loader.py  merge_output_csv.py  requirements.txt
backend/script/output/: rasff_trade_all_pairs_2022_20260318_100101.csv  trade_Bulgaria_Türkiye_Belgium_2022_2023_20260318_102856.csv  trade_Bulgaria_Türkiye_Cyprus_2022_2023_20260318_102906.csv  trade_Bulgaria_Türkiye_Czech_Republic_2022_2023_20260318_102916.csv  trade_Bulgaria_Türkiye_Denmark_2022_2023_20260318_102921.csv  trade_Bulgaria_Türkiye_France_2022_2023_20260318_102934.csv  trade_Bulgaria_Türkiye_Germany_2022_2023_20260318_102938.csv  trade_Bulgaria_Türkiye_Greece_2022_2023_20260318_102942.csv  trade_Bulgaria_Türkiye_Hungary_2022_2023_20260318_102947.csv  trade_Bulgaria_Türkiye_Ireland_2022_2023_20260318_102952.csv  trade_France_Austria_2022_2023_20260318_101207.csv  (+89 more)
crates/defensefood_core/: Cargo.toml
(+73 files in other folders)
