[build-system]
requires = ["maturin>=1.5,<2.0"]
build-backend = "maturin"

[project]
name = "defensefood-core"
version = "0.1.0"
description = "Rust computation engine for EU Food Fraud Vulnerability Intelligence System"
requires-python = ">=3.10"

[tool.maturin]
features = ["pyo3/extension-module"]
manifest-path = "crates/defensefood_core/Cargo.toml"
module-name = "defensefood_core"
